--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100%;
 }
 
 .header,
@@ -17,8 +18,8 @@
     flex: 1;
 }
 
-
 .main {
     flex: 1;
     padding: 10px;
+    margin-top: 45px;
 }
